[package]
name = "backend_challenge"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
surrealdb = { version = "2.4", default-features = false, features = ["kv-mem"] }
axum = "0.8"
chrono = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
